--- a/test/css/stylesheet.css
+++ b/test/css/stylesheet.css
@@ -1,18 +1,27 @@
 .product_list_container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-  gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 3rem;
   max-width: 1700px;
   margin: 0 auto;
+  padding: 30px;
 }
 
 article {
   display: grid;
   grid-template-rows: subgrid;
   grid-row: span 3;
-  gap: 40px;
+  gap: 0;
+  background-color: white;
+  padding-left: 50px;
+  padding-top: 50px;
+  padding-bottom: 30px;
 }
 
 article img {
   max-width: 90%;
+}
+
+body {
+  background-color: rgb(244, 246, 250);
 }
